# ACNC2025-HCCL

./: .gitignore  Dockerfile  README.md  build.sh  patch.sh  version.info
cmake/: config.cmake
docs/: README.md
src/domain/collective_communication/algorithm/base/alg_template/: CMakeLists.txt  alg_template_base.cc  alg_template_base.h  alg_template_base_pub.h  alg_template_register.cc  alg_template_register.h  alltoall_utils_pub.h  asymmetric_hierarchical_concatenate_alg_template_base.cc  asymmetric_hierarchical_concatenate_alg_template_base.h  asymmetric_hierarchical_concatenate_alg_template_base_pub.h  asymmetric_hierarchical_concatenate_base.cc  asymmetric_hierarchical_concatenate_base.h  asymmetric_hierarchical_concatenate_base_pub.h  nonuniform_bruck_base.cc  nonuniform_bruck_base.h  nonuniform_bruck_base_pub.h  nonuniform_hierarchical_ring_base.cc  nonuniform_hierarchical_ring_base.h  nonuniform_hierarchical_ring_base_pub.h  nonuniform_hierarchical_ring_v1_base.cc  nonuniform_hierarchical_ring_v1_base.h  nonuniform_hierarchical_ring_v1_base_pub.h  template_v1_utils.h
src/domain/collective_communication/algorithm/base/alg_template/component/: CMakeLists.txt  reducer.cc  reducer_pub.h  sender.cc  sender_pub.h
src/domain/collective_communication/algorithm/base/alg_template/inc_all_reduce_deter/: all_reduce_chunk_mesh_pub.h  all_reduce_local_reduce_bcast_pub.h  all_reduce_local_reduce_pub.h
src/domain/collective_communication/algorithm/base/alg_template/temp_all_gather/: CMakeLists.txt  aligned_all_gather_double_ring.cc  all_gather_ahc.cc  all_gather_ahc.h  all_gather_ahc_broke.cc  all_gather_ahc_broke.h  all_gather_ahc_broke_pub.h  all_gather_ahc_pub.h  all_gather_graph_pipeline.cc  all_gather_graph_pipeline.h  all_gather_halving_doubling.cc  all_gather_hd_stage.cc  all_gather_hd_stage_pub.h  all_gather_mesh.cc  all_gather_multi_stream_mesh.cc  all_gather_multi_stream_mesh.h  all_gather_multi_stream_mesh_pub.h  all_gather_nb.cc  all_gather_nb.h  all_gather_nb_pub.h  all_gather_nhr.cc  all_gather_nhr.h  all_gather_nhr_pub.h  all_gather_nhr_v1.cc  all_gather_nhr_v1.h  all_gather_nhr_v1_pub.h  all_gather_pipeline.cc  all_gather_pipeline.h  all_gather_pipeline_pub.h  all_gather_recursive_hd.cc  all_gather_recursive_hd.h  all_gather_ring.cc  all_gather_ring_concurrent_direct.cc  all_gather_single_stream_mesh.cc  all_gather_single_stream_mesh.h  all_gather_single_stream_mesh_pub.h  all_gather_sio_hccs.cc  all_gather_sio_hccs.h  all_gather_sio_hccs_pub.h  all_gather_sio_mesh_hybrid.cc  (+7 more)
src/domain/collective_communication/algorithm/base/alg_template/temp_all_reduce/: CMakeLists.txt  all_reduce_ahc.cc  all_reduce_ahc.h  all_reduce_ahc_broke.cc  all_reduce_ahc_broke.h  all_reduce_ahc_broke_pub.h  all_reduce_ahc_pub.h  all_reduce_chunk_mesh.cc  all_reduce_chunk_mesh.h  all_reduce_doubling.cc  all_reduce_doubling.h  all_reduce_doubling_direct.cc  all_reduce_doubling_direct.h  all_reduce_doubling_direct_pub.h  all_reduce_doubling_pub.h  all_reduce_graph_pipeline.cc  all_reduce_graph_pipeline.h  all_reduce_graph_pipeline_pub.h  all_reduce_hd_optim.cc  all_reduce_hd_optim_pub.h  all_reduce_local_reduce.cc  all_reduce_local_reduce.h  all_reduce_local_reduce_bcast.cc  all_reduce_local_reduce_bcast.h  all_reduce_mesh_oneshot.cc  all_reduce_mesh_oneshot.h  all_reduce_mesh_oneshot_pub.h  all_reduce_mesh_opbase.cc  all_reduce_mesh_opbase.h  all_reduce_mesh_opbase_pub.h  all_reduce_nb.cc  all_reduce_nb.h  all_reduce_nb_pub.h  all_reduce_nhr.cc  all_reduce_nhr.h  all_reduce_nhr_oneshot.cc  all_reduce_nhr_oneshot.h  all_reduce_nhr_oneshot_pub.h  all_reduce_nhr_pub.h  all_reduce_nhr_v1.cc  (+11 more)
src/domain/collective_communication/algorithm/base/alg_template/temp_alltoall/: CMakeLists.txt  allltoall_pipeline_base.cc  allltoall_pipeline_base.h  allltoall_pipeline_base_pub.h  allltoall_pipeline_mesh_pairwise_ccl_enough.cc  allltoall_pipeline_mesh_pairwise_ccl_enough.h  allltoall_pipeline_mesh_pairwise_ccl_enough_pub.h  allltoall_pipeline_mesh_pairwise_ping_pong.cc  allltoall_pipeline_mesh_pairwise_ping_pong.h  (+1 more)
(+613 files in other folders)
